--- a/050.ExprWPF/050.ExprWPF.csproj
+++ b/050.ExprWPF/050.ExprWPF.csproj
@@ -94,10 +94,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Expr, Version=1.0.4616.2785, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libs\Expr.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -117,10 +113,6 @@
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Unicode, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Libs\Unicode.dll</HintPath>
-    </Reference>
     <Reference Include="WindowsBase">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
@@ -251,6 +243,14 @@
     <ProjectReference Include="..\001.Utils\001.Utils.csproj">
       <Project>{c7f99b9c-dcdd-4d51-8ef1-a83264555d73}</Project>
       <Name>001.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\040.Parsing\Expr\Expr.csproj">
+      <Project>{eff3e46c-89cb-4e15-84d3-bf7ce0d72b4b}</Project>
+      <Name>Expr</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\040.Parsing\Unicode\Unicode.csproj">
+      <Project>{339136ba-87e4-444a-8847-4e1ea846288e}</Project>
+      <Name>Unicode</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
